Scrum 44 nest be Supervisor Registration endpoint implemented and tested
